Rename folder and update examples

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,6 +1,5 @@
 IMAGE_NAME='denibertovic/slides'
 
-
 REVEALJS_TRANSITION?=linear
 REVEALJS_THEME?=black
 REVEALJS_URL=/opt/slides/reveal.js
@@ -9,54 +8,75 @@ PANDOC_CMD_PRESENT="pandoc -5 --slide-level=1 -t revealjs --highlight-style=zenb
 
 PANDOC_CMD_PDF="pandoc --slide-level=1 -t latex --highlight-style=zenburn -f markdown_github+mmd_title_block+backtick_code_blocks --standalone --self-contained --section-divs md/slides.md -o out/out.pdf"
 
-.PHONY: run prompt clean clean-html html pdf present logs
+.PHONY: run prompt clean html pdf present logs
 
 LOCAL_USER_ID ?= $(shell id -u $$USER)
 
-run: clean
-	@docker run -d \
+require-%:
+	@ if [ "${${*}}" = "" ]; then \
+		echo "ERROR: Environment variable not set: \"$*\""; \
+		exit 1; \
+	fi
+
+## Run node.js web server
+run: require-LOCAL_USER_ID require-IMAGE_NAME clean
+	@-docker rm -v -f slides
+	@docker run --rm -d \
 		-e LOCAL_USER_ID=${LOCAL_USER_ID} \
 		-v `pwd`/md:/opt/slides/reveal.js/md \
 		-p 8000:8000 \
 		-p 35729:35729 \
-		--name presentation \
+		--name slides \
 	$(IMAGE_NAME)
 	@echo "\n\nServer launched. Visit http://localhost:8000 to view slides.\n"
 
-prompt:
-	@docker run -it \
+## Spawn bash shell in the container
+shell: require-LOCAL_USER_ID require-IMAGE_NAME
+	@docker run --rm -it \
 		-e LOCAL_USER_ID=${LOCAL_USER_ID} \
  		-v `pwd`/out:/opt/slides/reveal.js/out \
 		-v `pwd`/md:/opt/slides/reveal.js/md \
 	$(IMAGE_NAME) /bin/bash
 
-clean: clean-html
-	@-docker rm -v -f presentation
-
-clean-html:
+## Removes generated files
+clean:
 	@rm -rf out
 
-html: clean
-	@docker run -d \
+## Generate index.html
+html: require-LOCAL_USER_ID require-IMAGE_NAME clean
+	@docker run --rm -it \
 		-e LOCAL_USER_ID=${LOCAL_USER_ID} \
  		-v `pwd`/md:/opt/slides/reveal.js/md \
  		-v `pwd`/out:/opt/slides/reveal.js/out \
-		--name presentation \
 	$(IMAGE_NAME) /bin/bash -c ${PANDOC_CMD_PRESENT}
 	@echo "\n\nSUCCESS! Check out/index.html\n"
 
-pdf: clean
-	@docker run -d \
+## Generate PDF
+pdf: require-LOCAL_USER_ID require-IMAGE_NAME clean
+	@docker run --rm -it \
 		-e LOCAL_USER_ID=${LOCAL_USER_ID} \
  		-v `pwd`/md:/opt/slides/reveal.js/md \
  		-v `pwd`/out:/opt/slides/reveal.js/out \
-		--name presentation \
 	$(IMAGE_NAME) /bin/bash -c ${PANDOC_CMD_PDF}
 	@echo "\n\nSUCCESS! PDF created in out/out.pdf\n"
 
+## Open generated index.html in a google-chrome incognito window
 present:
 	@google-chrome --incognito out/index.html
 
+## Show logs from the slides container
 logs:
-	@docker logs presentation
+	@docker logs -f slides
 
+## Show help screen
+help:
+	@echo "Please use \`make <target>' where <target> is one of\n\n"
+	@awk '/^[a-zA-Z\-\_0-9]+:/ { \
+		helpMessage = match(lastLine, /^## (.*)/); \
+		if (helpMessage) { \
+			helpCommand = substr($$1, 0, index($$1, ":")-1); \
+			helpMessage = substr(lastLine, RSTART + 3, RLENGTH); \
+			printf "%-30s %s\n", helpCommand, helpMessage; \
+		} \
+	} \
+	{ lastLine = $$0 }' $(MAKEFILE_LIST)
